--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=goal.glory.GoalGlory
+javafx.main.class=com.jeu.main.NewFXMain
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
