--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -108,7 +108,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=JDK_FX_17
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
