--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${libs.JavaFX_17.classpath}
+    ${libs.JavaFX_17.classpath}:\
+    ${libs.JavaFX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,11 +71,16 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -95,6 +101,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 jlink.launcher=false
 jlink.launcher.name=Goal-Glory
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
@@ -108,6 +117,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=false
 platform.active=JDK_FX_17
 run.classpath=\
     ${dist.jar}:\
